--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,14 +5,36 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-    <title>Title</title>
+    <h:outputStylesheet library="css" name="style.css"/>
+    <script type="text/javascript" src="jquery-3.2.1.js"></script>
+    <title>Машинки</title>
 </h:head>
 
 <h:body>
-    BODY
+    <p:panel header="Список товаров" class="header">
+        <br/>
+
+
+        <p:dataTable value="#{auto.list}" var="car">
+            <p:column headerText="Id">
+                <h:outputText value="#{car.id}"/>
+            </p:column>
+            <p:column headerText="Год">
+                <h:outputText value="#{car.year}"/>
+            </p:column>
+            <p:column headerText="Марка">
+                <h:outputText value="#{car.brand}"/>
+            </p:column>
+            <p:column headerText="Цвет">
+                <h:outputText value="#{car.color}"/>
+            </p:column>
+        </p:dataTable>
+    </p:panel>
+
 </h:body>
 
 </html>
